# io

./: CMakeLists.txt  README.md
.github/workflows/: io-cross-platform-ci.yml  io-strict-ci.yml
cmake/: vix_ioConfig.cmake.in
include/vix/io/: Buffer.hpp  Copy.hpp  Flush.hpp  Input.hpp  Io.hpp  IoError.hpp  IoOptions.hpp  IoResult.hpp  Output.hpp  Read.hpp  ReadAll.hpp  ReadLine.hpp  Stderr.hpp  Stdin.hpp  Stdout.hpp  Write.hpp  WriteLine.hpp
src/: Copy.cpp  Flush.cpp  Input.cpp  Output.cpp  Read.cpp  ReadAll.cpp  ReadLine.cpp  Stderr.cpp  Stdin.cpp  Stdout.cpp  Write.cpp  WriteLine.cpp
test/: CMakeLists.txt  buffer_test.cpp  copy_test.cpp  read_all_test.cpp  read_line_test.cpp  write_test.cpp
